--- a/RublenX.RespuestasRapidas/ConsoleAppFrk/ConsoleAppFrk.csproj
+++ b/RublenX.RespuestasRapidas/ConsoleAppFrk/ConsoleAppFrk.csproj
@@ -45,9 +45,18 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Questions\273458\LecturaXml.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Questions\273458\FicheroKO.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Questions\273458\FicheroOK.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
