RublenX.RespuestasRapidas - Respuesta a pregunta https://es.stackoverflow.com/questions/274465/c-validacion-numero-de-telefono

--- a/RublenX.RespuestasRapidas/ConsoleAppFrk/ConsoleAppFrk.csproj
+++ b/RublenX.RespuestasRapidas/ConsoleAppFrk/ConsoleAppFrk.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Questions\273458\LecturaXml.cs" />
+    <Compile Include="Questions\Q274465\ExpRegTelefono.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
